--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Upload PDF to Release
         uses: softprops/action-gh-release@v1
         with:
+          tag_name: pdf
           files: main.pdf
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
