--- a/.github/workflows/latex.yml
+++ b/.github/workflows/latex.yml
@@ -32,5 +32,5 @@ jobs:
           files: main.pdf
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-
+        permissions:
+          contents: write
